agregar api desplegada en heroku

--- a/home.html
+++ b/home.html
@@ -35,10 +35,10 @@
         <center>
             <div class="container-fluid py-4 ms-a">
                 <div id="listarCard" class="row row-cols-2 row-cols-md-2 g-4 grid-pets">
-            
                 </div>
-            </div>
         </center>    
+    </main>
+
     
     <footer>
         <a class="selection" href="./home.html"><img src="./images/home2.png" alt="home2">Home</a>
