--- a/chat.html
+++ b/chat.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Adopción de mascotas</title>
 </head>
 <body>
+
+    <main id="containerChat">
+
+    </main>
     
 
     <footer>
         <a href="./home.html"><img src="./images/home.png" alt="home2">Home</a>
         <a class="selection" href="./chat.html"><img src="./images/chat2.png" alt="chat"> Mensajes</a>
         <a href="./favorites.html"><img src="./images/heart-bar-bottom.png" alt="heart"> Favoritos</a>
-        <a href="./perfil.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
+        <a href="./profile.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
     </footer>
 
     <script src="./scripts/showChat.js" type="module"></script>
