--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Adopción de mascotas</title>
 </head>
+
 <body>
     <img id="img1" src="./images/logo_Index1.png" alt="logo_Index1">
     <a class="link-logo" href="./index2.html"><img id="img2" src="./images/logo_index2.png" alt="logo_index2"></a>
-    
+
     <script src="./scripts/index.js"></script>
 </body>
+
 </html>
