--- a/index2.html
+++ b/index2.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Adopción de mascotas</title>
 </head>
 
 <body>
     <div class="cont-index">
-        <img  class="img-index" src="./images/image_pets.png" alt="image_pets">
+        <img class="img-index" src="./images/image_pets.png" alt="image_pets">
         <div class="cont-index2">
             <h2>Encuentra tu amigo fiel</h2>
             <p>Cuando adoptas a una mascota, cosas maravillosas suceden en tu vida. Si estás pensando en tener un nuevo
