--- a/favorites.html
+++ b/favorites.html
@@ -1,29 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Adopción de mascotas</title>
 </head>
+
 <body>
     <header>
         <h1>Mascotas Favoritas</h1>
     </header>
 
     <main>
-        <section class="container-fluid py-4 ms-a">
-            <div class="row row-cols-1 row-cols-sm-3 row-cols-md-3  row-cols-lg-3 g-3 cardSection" id="renderFavoritos">
+        <div class="container-fluid mt-4 mb-3">
+            <div class="row row-cols-2 row-cols-md-2 g-4 grid-mascotas">
+
             </div>
-        </section>
-    </main>
-    
+        </div>
+   </main>
+
     <footer>
         <a href="./home.html"><img src="./images/home.png" alt="home">Home</a>
         <a href="./chat.html"><img src="./images/chat.png" alt="chat"> Mensajes</a>
-        <a class="selection" href="./favorites.html"><img src="./images/heart-bar-bottom2.png" alt="heart"> Favoritos</a>
-        <a href="./perfil.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
+        <a class="selection" href="./favorites.html"><img src="./images/heart-bar-bottom2.png" alt="heart">Favoritos</a>
+        <a href="./profile.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
     </footer>
+
+    <script src="./scripts/showFavorites.js"></script>
 </body>
+
 </html>
