--- a/home.html
+++ b/home.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/styles.css">
-    <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">    
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Adopción de mascotas</title>
+    <style>
+        body{
+            background-color: #FEC7D7;    
+        }    
+    </style>
 </head>
+
 <body>
     <header>
         <div>
@@ -23,30 +31,32 @@
                 <h3>Perros</h3>
             </button>
             <button id="btn-cate-cat" class="cate-btn">
-                <div >
+                <div>
                     <img src="./images/img_cat.png" alt="img_cat">
                 </div>
                 <h3>Gatos</h3>
             </button>
         </div>
-    </header> 
+    </header>
 
     <main>
-        <center>
-            <div class="container-fluid py-4 ms-a">
+        <section>
+            <div class="container-fluid mt-4 mb-3">
                 <div id="listarCard" class="row row-cols-2 row-cols-md-2 g-4 grid-pets">
                 </div>
-        </center>    
+            </div>
+            </section>
     </main>
 
-    
+
     <footer>
         <a class="selection" href="./home.html"><img src="./images/home2.png" alt="home2">Home</a>
         <a href="./chat.html"><img src="./images/chat.png" alt="chat"> Mensajes</a>
         <a href="./favorites.html"><img src="./images/heart-bar-bottom.png" alt="heart"> Favoritos</a>
-        <a href="./perfil.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
+        <a href="./profile.html"><img src="./images/perfil.png" alt="perfil"> Perfil</a>
     </footer>
 
     <script src="./scripts/home.js" type="module"></script>
 </body>
+
 </html>
