--- a/chat.html
+++ b/chat.html
@@ -7,11 +7,32 @@
     <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Adopción de mascotas</title>
+    <style>
+        body{
+            background-color: #FEC7D7;    
+        }    
+    </style>
 </head>
 <body>
+    <header>
+        <h1>Mensajes</h1>
+    </header>
 
     <main id="containerChat">
+
+        <div class="bg-white">
+            <div><img src="./images/maria-dolores2.png" alt="maria"></div>
+            <div class="div1">
+                <div class="div2">
+                <h2>Maria Dolores</h2>
+                <p>4:36</p>
+            </div>
+                <p>¡Hola! claro, podemos acordar un lugar y hora que conozcas...</p>
+            </div>
+            <div class=".bg-dark"><a class=".btn-light" href="./message.html">&#62</a></div>
+        </div>
 
     </main>
     
