--- a/message.html
+++ b/message.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/logo_index2.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Document</title>
+    <style>
+        body{
+            background-color: #FEC7D7;    
+        }    
+    </style>
 </head>
 <body>
     <body class="emptyChat">
 
-        <a href="./home.html"><button class="btnBack-empty"><img src="./images/back.png" alt="atrás"></button></a>
+        <a class="btnBack" href="./chat.html"><img src="./images/back.png" alt="atrás"></a>
+        <div class="headerme bg-white d-flex justify-content-center">
+            <img src="./images/maria-dolores2.png" alt="">
+            <h2>Maria Dolores</h2>
+        </div>
     
         <p class="emptyChat-mensaje">Aún no hay mensajes</p>
-        <input type="text">
+        <img src="./images/input-message.png" alt="input-message">
+        <img src="./images/keyboard.png" alt="keyboard">
 
         <script src="./scripts/showChat.js" type=""></script>
 </body>
