--- a/profile.html
+++ b/profile.html
@@ -34,7 +34,7 @@
     <div>
         <form class="row g-3" id="formularioPerfil">
             <div class="col-md-6 mx-auto" >
-                <img class="profileFoto" src="../images/juan-mendez.png" class="profileFoto" alt="juan">
+                <img class="profileFoto" src="https://res.cloudinary.com/dmaviub4l/image/upload/v1650280275/maria-dolores2_viutcb.png" class="profileFoto" alt="juan">
                 <p class="profileNombre" >Juan Méndez</p>
               <label for="name" class="form-label">Nombre</label><br>
               <input type="text"  id="inputName" placeholder="Juan">
